--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ https://templatemo.com/tm-539-simple-house
 					<ul>
 						<li class="tm-paging-item"><a href="#" class="tm-paging-link active">Logo</a></li>
 						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Character</a></li>
-						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Album Art</a></li>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Album</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -260,7 +260,7 @@ https://templatemo.com/tm-539-simple-house
 				</div> <!-- gallery page 2 -->
 				
 				<!-- gallery page 3 -->
-				<div id="tm-gallery-page-album-art" class="tm-gallery-page hidden">
+				<div id="tm-gallery-page-album" class="tm-gallery-page hidden">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<img src="img/gallery/08.jpg" alt="Image" class="img-fluid tm-gallery-img" />
