--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
     <link href="css/templatemo-style.css" rel="stylesheet">
   </head>
   <!--
-Simple House
-https://templatemo.com/tm-539-simple-house
+    Designed by Cagil Benibol 
+    cagilbenibol.com
 -->
-  <body>
+<body>
     <div class="container"> <!-- Top box -->
       <!-- Logo & Site Name -->
       <div class="placeholder">
@@ -43,8 +43,8 @@ https://templatemo.com/tm-539-simple-house
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
                 <ul class="tm-nav-ul">
-                  <li class="tm-nav-li"><a href="index.html" class="tm-nav-link active">Home</a></li>
-                  <li class="tm-nav-li"><a href="contact.html" class="tm-nav-link">Contact</a></li>
+                  <li class="tm-nav-li"><a href="index.html" class="tm-nav-link">Home</a></li>
+                  <li class="tm-nav-li"><a href="contact.html" class="tm-nav-link active">Contact</a></li>
                 </ul>
               </nav>
             </div>
@@ -166,5 +166,5 @@ https://templatemo.com/tm-539-simple-house
 			}	
 		});
 	</script>
-  </body>
+</body>
 </html>
