--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@
         </div>
       </main>
       <footer class="tm-footer text-center">
-        <p>Copyright © 2020 Simple House | Design: <a rel="nofollow" href="https://templatemo.com">TemplateMo</a></p>
+        <p>Copyright © 2021 Yasemin Ünsever</p>
       </footer>
     </div>
     <script src="js/jquery.min.js"></script>
