--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Simple House - Contact Page</title>
+    <title>Unsever Design</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link href="css/all.min.css" rel="stylesheet">
     <link href="css/templatemo-style.css" rel="stylesheet">
@@ -54,96 +54,41 @@
       <main>
         <header class="row tm-welcome-section">
           <h2 class="col-12 text-center tm-section-title">Contact Page</h2>
-          <p class="col-12 text-center">You may use <a rel="nofollow" href="https://www.ltcclock.com/downloads/simple-contact-form/"
-              target="_blank">Simple
-              Contact Form</a> to send email to your inbox. You can modify and
-            use this template for your website. Header image has a parallax
-            effect. Total 3 HTML pages included in this template.</p>
+          <p class="col-12 text-center">You can mail to me and access my freelance workplaces @</p>
         </header>
-        <div class="tm-container-inner-2 tm-contact-section">
-          <div class="row">
-            <div class="col-md-6"> </div>
-            <div class="col-md-6">
-              <div class="tm-address-box">
-                <h4 class="tm-info-title tm-text-success">Our Address</h4>
-                <address> 180 Orci varius natoque penatibus et magnis dis
-                  parturient montes, nascetur ridiculus mus 10550 </address>
-                <a href="tel:080-090-0110" class="tm-contact-link"> 080-090-0110
-                </a> <a href="mailto:info@company.co" class="tm-contact-link">
-                  yaseminunse@company.co </a>
-                <div class="tm-contact-social"> <a href="https://fb.com/templatemo"
-                    class="tm-social-link"><i
-                      class="fab fa-facebook tm-social-icon"></i></a>
-                  <a href="#" class="tm-social-link"><i class="fab fa-twitter tm-social-icon"></i></a>
-                  <a href="#" class="tm-social-link"><i class="fab fa-instagram tm-social-icon"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- How to change your own map point
-	1. Go to Google Maps	2. Click on your location point	3. Click "Share" and choose "Embed map" tab	4. Copy only URL and paste it within the src="" field below-->
-        <div class="tm-container-inner-2 tm-map-section">
-          <div class="row">
-            <div class="col-12">
-              <div class="tm-map"> <iframe src="https://www.google.com/maps/embed?pb=%211m18%211m12%211m3%211d11196.961132529668%212d-43.38581128725845%213d-23.011063013218724%212m3%211f0%212f0%213f0%213m2%211i1024%212i768%214f13.1%213m3%211m2%211s0x9bdb695cd967b7%3A0x171cdd035a6a9d84%212sAv.%20L%C3%BAcio%20Costa%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%20Brazil%215e0%213m2%211sen%212sth%214v1568649412152%215m2%211sen%212sth"
-                  style="border:0;"
-                  allowfullscreen=""
-                  frameborder="0"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="tm-container-inner-2 tm-info-section">
-          <div class="row">
-            <!-- FAQ -->
-            <div class="col-12 tm-faq">
-              <h2 class="text-center tm-section-title">FAQs</h2>
-              <p class="text-center">This section comes with Accordion tabs for
-                different questions and answers about Simple House HTML CSS
-                template. Thank you. #666</p>
-              <div class="tm-accordion"> <button class="accordion">1. Fusce eu
-                  lorem et dui #09C maximus varius?</button>
-                <div class="panel">
-                  <p>#666 Duis blandit purus vel nenenatis rutrum. Pellentesque
-                    pellentesque tindicunt lorem, ac egestas massa sollicitudin
-                    vel. Nam scelerisque vulputate quam mollis pretium. Morbi
-                    condimentum volutpat.</p>
-                </div>
-                <button class="accordion">2. Vestibulum #999 ante ipsum primis
-                  in faucibus orci?</button>
-                <div class="panel">
-                  <p>Mauris euismod odio at commodo rhoncus. Maecenas nec
-                    interdum purus, sed auctor est. Sed eleifend urna nec diam
-                    consectetur, a aliquet turpis facilisis. Integer est sapien,
-                    sagittis vel massa vel, interdum euismod erat. Aenean
-                    sollicitudin nisi neque, efficitur posuere urna rutrum
-                    porta.</p>
-                </div>
-                <button class="accordion">3. Can I redistribute this template as
-                  a ZIP file?</button>
-                <div class="panel">
-                  <p>Redistributing this template as a downloadable ZIP file on
-                    any template collection site is strictly prohibited. You
-                    will need to <a href="https://templatemo.com/contact">contact
-                      TemplateMo</a> for additional permissions about our
-                    templates. Thank you.</p>
-                </div>
-                <button class="accordion">4. Ut ac erat sit amet neque efficitur
-                  faucibus et in lectus?</button>
-                <div class="panel">
-                  <p>Vivamus viverra pretium ultricies. Praesent feugiat, sapien
-                    vitae blandit efficitur, sem nulla venenatis nunc, vel
-                    maximus ligula sem a sem. Pellentesque ligula ex, facilisis
-                    ac libero a, blandit ullamcorper enim.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div id="tm-gallery-page-logo" class="tm-gallery-page">
+        <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="https://bionluk.com/berkingham" target="_blank"><img src="img/bionluk.jpeg"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Bionluk</h4>
+                  <p class="tm-gallery-description"> <a href="https://bionluk.com/berkingham" target="_blank"> @berkingham</p>
+                </figcaption> </figure>
+            </article>
+        <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="https://bionluk.com/berkingham" target="_blank"><img src="img/freelancer.png"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Freelancer</h4>
+                  <p class="tm-gallery-description"> <a href="https://www.freelancer.com/u/unsever" target="_blank"> @unsever</p>
+                </figcaption> </figure>
+            </article>
+        <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="mailto:yaseminunsever96@gmail.com" target="_blank"><img src="img/gmail.png"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Freelancer</h4>
+                  <p class="tm-gallery-description"> <a href="mailto:yaseminunsever96@gmail.com" target="_blank"> mail me</p>
+                </figcaption> </figure>
+            </article>            
+
+            
       </main>
       <footer class="tm-footer text-center">
-        <p>Copyright © 2021 Yasemin Ünsever</p>
+        <p>Copyright © 2021 Unsever Design | Web Design: <a rel="nofollow" href="http://cagilbenibol.com">Cagil Benibol</a> </p>
       </footer>
     </div>
     <script src="js/jquery.min.js"></script>
