--- a/index.html
+++ b/index.html
@@ -53,12 +53,8 @@
       </div>
       <main>
         <header class="row tm-welcome-section">
-          <h2 class="col-12 text-center tm-section-title">Welcome to Simple
-            House</h2>
-          <p class="col-12 text-center">Total 3 HTML pages are included in this
-            template. Header image has a parallax effect. You can feel free to
-            download, edit and use this TemplateMo layout for your commercial or
-            non-commercial websites.</p>
+          <h2 class="col-12 text-center tm-section-title">Welcome to my world of imagination...</h2>
+          <p class="col-12 text-center">Hello, I'm Yasemin Unsever. I graduated from the Department of Public Relations and Advertising. I like to reflect my imagination on my designs. I love working in this field and I continue to improve myself.</p>
         </header>
         <div class="tm-paging-links">
           <nav>
@@ -72,7 +68,7 @@
         </div>
         <!-- Gallery -->
         <div class="row tm-gallery">
-          <!-- gallery page 1 -->
+          <!-- PAGE LOGO -->
           <div id="tm-gallery-page-logo" class="tm-gallery-page">
             <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
               <figure> <a href="img/Logo/zulmann.jpg" target="_blank"><img src="img/Logo/zulmann.jpg"
@@ -157,8 +153,8 @@
                 </figcaption> </figure>
             </article>
           </div>
-          <!-- gallery page 1 -->
-          <!-- gallery page 2 -->
+          <!-- PAGE LOGO -->
+          <!-- PAGE CHARACTER -->
           <div id="tm-gallery-page-character" class="tm-gallery-page hidden">
             <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
               <figure> <a href="img/char/lovebubbles.png" target="_blank"><img
@@ -262,71 +258,42 @@
                 </figcaption> </figure>
             </article>
           </div>
-          <!-- gallery page 2 -->
-          <!-- gallery page 3 -->
+          <!-- PAGE CHARACTER -->
+          <!-- PAGE ALBUMART -->
           <div id="tm-gallery-page-albumart" class="tm-gallery-page hidden">
             <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-              <figure> <img src="img/gallery/08.jpg" alt="Image" class="img-fluid tm-gallery-img">
+              <figure> <a href="img/albumart/yaga.jpg" target="_blank"><img
+                    src="img/albumart/yaga.jpg"
+                    alt="Image"
+                    class="img-fluid2 tm-gallery-img2"></a>
                 <figcaption>
-                  <h4 class="tm-gallery-title">Noodle One</h4>
-                  <p class="tm-gallery-description">Orci varius natoque
-                    penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus.</p>
-                  <p class="tm-gallery-price">$12.50</p>
+                  <h4 class="tm-gallery-title"> Yaga </h4>
+                  <p class="tm-gallery-price"></p>
                 </figcaption> </figure>
             </article>
             <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-              <figure> <img src="img/gallery/07.jpg" alt="Image" class="img-fluid tm-gallery-img">
+              <figure> <a href="img/albumart/albume1.jpg" target="_blank"><img src="img/albumart/albume1.jpg"
+                    alt="Image"
+                    class="img-fluid2 tm-gallery-img2"></a>
                 <figcaption>
-                  <h4 class="tm-gallery-title">Noodle Second</h4>
-                  <p class="tm-gallery-description">Orci varius natoque
-                    penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus.</p>
-                  <p class="tm-gallery-price">$15.50</p>
+                  <h4 class="tm-gallery-title">Petrichor</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
                 </figcaption> </figure>
             </article>
             <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-              <figure> <img src="img/gallery/06.jpg" alt="Image" class="img-fluid tm-gallery-img">
+              <figure> <a href="img/albumart/albume2.jpg" target="_blank"><img src="img/albumart/albume2.jpg"
+                    alt="Image"
+                    class="img-fluid2 tm-gallery-img2"></a>
                 <figcaption>
-                  <h4 class="tm-gallery-title">Third Soft Noodle</h4>
-                  <p class="tm-gallery-description">Orci varius natoque
-                    penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus.</p>
-                  <p class="tm-gallery-price">$20.50</p>
-                </figcaption> </figure>
-            </article>
-            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-              <figure> <img src="img/gallery/05.jpg" alt="Image" class="img-fluid tm-gallery-img">
-                <figcaption>
-                  <h4 class="tm-gallery-title">Aliquam sagittis</h4>
-                  <p class="tm-gallery-description">Orci varius natoque
-                    penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus.</p>
-                  <p class="tm-gallery-price">$30.25</p>
-                </figcaption> </figure>
-            </article>
-            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-              <figure> <img src="img/gallery/04.jpg" alt="Image" class="img-fluid tm-gallery-img">
-                <figcaption>
-                  <h4 class="tm-gallery-title">Maecenas eget justo</h4>
-                  <p class="tm-gallery-description">Orci varius natoque
-                    penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus.</p>
-                  <p class="tm-gallery-price">$35.50</p>
-                </figcaption> </figure>
-            </article>
-            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-              <figure> <img src="img/gallery/03.jpg" alt="Image" class="img-fluid tm-gallery-img">
-                <figcaption>
-                  <h4 class="tm-gallery-title">Quisque et felis eros</h4>
-                  <p class="tm-gallery-description">Orci varius natoque
-                    penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus.</p>
-                  <p class="tm-gallery-price">$40.50</p>
+                  <h4 class="tm-gallery-title">Album Art</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
                 </figcaption> </figure>
             </article>
           </div>
-          <!-- gallery page 3 --> </div>
+          <!-- PAGE ALBUMART -->
+
         <div class="tm-section tm-container-inner">
           <div class="row">
             <div class="col-md-6">
@@ -337,20 +304,17 @@
             </div>
             <div class="col-md-6">
               <div class="tm-description-box">
-                <h4 class="tm-gallery-title">Maecenas nulla neque</h4>
-                <p class="tm-mb-45">Redistributing this template as a
-                  downloadable ZIP file on any template collection site is
-                  strictly prohibited. You will need to <a rel="nofollow" href="https://templatemo.com/contact">talk
-                    to us</a> for additional permissions about our templates.
-                  Thank you.</p>
-                <a href="about.html" class="tm-btn tm-btn-default tm-right">Read
-                  More</a> </div>
+                <h4 class="tm-gallery-title">"Bad artits copy. Good artists steal"</h4>
+                <p class="tm-mb-45">-Pablo Picasso</p>
+                <p class="ps">&nbsp;</p>
+                <p class="tm-mb-45">For my further works, please</p>
+                <a href="contact.html" class="tm-btn tm-btn-default tm-right">Contact Me</a> </div>
             </div>
           </div>
         </div>
       </main>
       <footer class="tm-footer text-center">
-        <p>Copyright © 2021 Yasemin Ünsever </p>
+        <p>Copyright © 2021 Unsever Design | Web Design: <a rel="nofollow" href="http://cagilbenibol.com">Cagil Benibol</a> </p>
       </footer>
     </div>
     <script src="js/jquery.min.js"></script>
