--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 </figcaption> </figure>
             </article>
         <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-              <figure> <a href="https://bionluk.com/berkingham" target="_blank"><img src="img/freelancer.png"
+              <figure> <a href="https://www.freelancer.com/u/unsever" target="_blank"><img src="img/freelancer.png"
                     alt="Image"
                     class="img-fluid tm-gallery-img"></a>
                 <figcaption>
