--- a/index.html
+++ b/index.html
@@ -152,6 +152,76 @@
                   <p class="tm-gallery-price"></p>
                 </figcaption> </figure>
             </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/Logo/atpot.png" target="_blank"><img src="img/Logo/atpot.png"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Ahtapot Live - Logo</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/Logo/atainox.png" target="_blank"><img src="img/Logo/atainox.png"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Atainox - Logo</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/Logo/avugat.jpg" target="_blank"><img src="img/Logo/avugat.jpg"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Avukathane - Logo</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/Logo/bilgeana.png" target="_blank"><img src="img/Logo/bilgeana.png"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">BİLGEANA - Logo</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/Logo/bgy.jpg" target="_blank"><img src="img/Logo/bgy.jpg"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Bir Garip Yapım - Logo</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/Logo/corious.jpg" target="_blank"><img src="img/Logo/corious.jpg"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Corious Fox - Logo</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/Logo/db.jpg" target="_blank"><img src="img/Logo/db.jpg"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">D-Soft Bilişim - Logo</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
           </div>
           <!-- PAGE LOGO -->
           <!-- PAGE CHARACTER -->
@@ -253,6 +323,66 @@
                     class="img-fluid tm-gallery-img"></a>
                 <figcaption>
                   <h4 class="tm-gallery-title">Purple</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/char/Happy Ginger.jpg" target="_blank"><img src="img/char/Happy Ginger.jpg"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Happy Ginger</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/char/lili.png" target="_blank"><img src="img/char/lili.png"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Lili</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/char/sisi.png" target="_blank"><img src="img/char/sisi.png"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Sisi</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/char/Sun Girl.jpg" target="_blank"><img src="img/char/Sun Girl.jpg"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Sun Girl</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/char/yasak elma.jpg" target="_blank"><img src="img/char/yasak elma.jpg"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Forbidden Apple</h4>
+                  <p class="tm-gallery-description"></p>
+                  <p class="tm-gallery-price"></p>
+                </figcaption> </figure>
+            </article>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+              <figure> <a href="img/char/Yasmine.jpg" target="_blank"><img src="img/char/Yasmine.jpg"
+                    alt="Image"
+                    class="img-fluid tm-gallery-img"></a>
+                <figcaption>
+                  <h4 class="tm-gallery-title">Yasmine</h4>
                   <p class="tm-gallery-description"></p>
                   <p class="tm-gallery-price"></p>
                 </figcaption> </figure>
