--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                 <h4 class="tm-gallery-title">"Bad artits copy. Good artists steal"</h4>
                 <p class="tm-mb-45">-Pablo Picasso</p>
                 <p class="ps">&nbsp;</p>
-                <p class="tm-mb-45">For my further inquiries, please</p>
+                <p class="tm-mb-45">For further inquiries, please</p>
                 <a href="contact.html" class="tm-btn tm-btn-default tm-right">Contact Me</a> </div>
             </div>
           </div>
