--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                     alt="Image"
                     class="img-fluid tm-gallery-img"></a>
                 <figcaption>
-                  <h4 class="tm-gallery-title">Freelancer</h4>
+                  <h4 class="tm-gallery-title">Gmail</h4>
                   <p class="tm-gallery-description"> <a href="mailto:yaseminunsever96@gmail.com" target="_blank"> mail me</p>
                 </figcaption> </figure>
             </article>            
