--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Unsever Design</title>
@@ -10,11 +10,10 @@
     <link href="css/templatemo-style.css" rel="stylesheet">
   </head>
   <!--
-    Designed by Cagil Benibol 
-    cagilbenibol.com
--->
-<body>
-    <div class="container"> <!-- Top box -->
+    Designed by Cagil Benibol     cagilbenibol.com
+--><body>
+    <div class="container">
+      <!-- Top box -->
       <!-- Logo & Site Name -->
       <div class="placeholder">
         <div class="parallax-window" data-parallax="scroll" data-image-src="img/char/psychic.png">
@@ -23,11 +22,8 @@
               <div class="col-md-6 col-12">
                 <div class="tm-site-text-box">
                   <h1 class="tm-site-title"><span class="tm-site-description"><img
-                        src="img/yaseminlogob.png"
-                        alt="Logo"
-                        class="tm-site-logo"
-                        height="250"
-                        width="250"></span></h1>
+                        src="img/yaseminlogob.png" alt="Logo" class="tm-site-logo"
+                        width="250" height="250"></span></h1>
                   <h1 class="tm-site-title">Yasemin Ünsever</h1>
                   <h6 class="tm-site-description"> Freelance Designer</h6>
                 </div>
@@ -54,41 +50,64 @@
       <main>
         <header class="row tm-welcome-section">
           <h2 class="col-12 text-center tm-section-title">Contact Page</h2>
-          <p class="col-12 text-center">You can mail to me and access my freelance workplaces @</p>
+          <p class="col-12 text-center">You can mail to me and access my
+            freelance workplaces @</p>
         </header>
-        <div id="tm-gallery-page-logo" class="tm-gallery-page">
-        <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-              <figure> <a href="https://bionluk.com/berkingham" target="_blank"><img src="img/bionluk.jpeg"
-                    alt="Image"
-                    class="img-fluid tm-gallery-img"></a>
-                <figcaption>
-                  <h4 class="tm-gallery-title">Bionluk</h4>
-                  <p class="tm-gallery-description"> <a href="https://bionluk.com/berkingham" target="_blank"> @berkingham</p>
-                </figcaption> </figure>
+        <div class="row tm-gallery text-center">
+          <div class="tm-gallery-page">
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item text-center">
+              <div style="text-align: center; margin-left: 80px;">
+                <figure> <a href="https://bionluk.com/berkingham" target="_blank"><img
+                      src="img/bionluk.jpeg" alt="Image" class="img-fluid tm-gallery-img"></a>
+                  <figcaption>
+                    <h4 class="tm-gallery-title">Bionluk</h4>
+                    <p class="tm-gallery-description"> <a href="https://bionluk.com/berkingham"
+                        target="_blank"> @berkingham</a></p>
+                    <a href="https://bionluk.com/berkingham" target="_blank"> </a></figcaption><a
+                    href="https://bionluk.com/berkingham" target="_blank"> </a></figure>
+                <a href="https://bionluk.com/berkingham" target="_blank"> </a></div>
             </article>
-        <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-              <figure> <a href="https://www.freelancer.com/u/unsever" target="_blank"><img src="img/freelancer.png"
-                    alt="Image"
-                    class="img-fluid tm-gallery-img"></a>
-                <figcaption>
-                  <h4 class="tm-gallery-title">Freelancer</h4>
-                  <p class="tm-gallery-description"> <a href="https://www.freelancer.com/u/unsever" target="_blank"> @unsever</p>
-                </figcaption> </figure>
-            </article>
-        <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
-              <figure> <a href="mailto:yaseminunsever96@gmail.com" target="_blank"><img src="img/gmail.png"
-                    alt="Image"
-                    class="img-fluid tm-gallery-img"></a>
-                <figcaption>
-                  <h4 class="tm-gallery-title">Gmail</h4>
-                  <p class="tm-gallery-description"> <a href="mailto:yaseminunsever96@gmail.com" target="_blank"> mail me</p>
-                </figcaption> </figure>
-            </article>            
-
-            
-      </main>
-      <footer class="tm-footer text-center">
-        <p>Copyright © 2021 Unsever Design | Web Design: <a rel="nofollow" href="http://cagilbenibol.com">Cagil Benibol</a> </p>
+            <div style="text-align: center; margin-left: 80px;"><a href="https://bionluk.com/berkingham"
+                target="_blank"> </a>
+              <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item text-center"><a
+                  href="https://bionluk.com/berkingham" target="_blank"> </a>
+                <figure><a href="https://bionluk.com/berkingham" target="_blank">
+                  </a><a href="https://www.freelancer.com/u/unsever" target="_blank"><img
+                      src="img/freelancer.png" alt="Image" class="img-fluid tm-gallery-img"></a>
+                  <figcaption>
+                    <h4 class="tm-gallery-title">Freelancer</h4>
+                    <p class="tm-gallery-description"> <a href="https://www.freelancer.com/u/unsever"
+                        target="_blank"> @unsever</a></p>
+                    <a href="https://www.freelancer.com/u/unsever" target="_blank">
+                    </a></figcaption><a href="https://www.freelancer.com/u/unsever"
+                    target="_blank"> </a></figure>
+                <a href="https://www.freelancer.com/u/unsever" target="_blank">
+                </a></article>
+              <a href="https://www.freelancer.com/u/unsever" target="_blank"> </a></div>
+            <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item text-center">
+              <div style="text-align: center; margin-left: 80px;"><a href="https://www.freelancer.com/u/unsever"
+                  target="_blank"> </a></div>
+              <figure>
+                <div style="text-align: center; margin-left: 80px;"><a href="https://www.freelancer.com/u/unsever"
+                    target="_blank"> </a><a href="mailto:yaseminunsever96@gmail.com"
+                    target="_blank"><img src="img/gmail.png" alt="Image" class="img-fluid tm-gallery-img"></a><figcaption>
+                    <h4 class="tm-gallery-title">Gmail</h4>
+                    <p class="tm-gallery-description"> <a href="mailto:yaseminunsever96@gmail.com"
+                        target="_blank"> mail me</a></p>
+                  </figcaption></div>
+                <figcaption><a href="mailto:yaseminunsever96@gmail.com" target="_blank">
+                  </a></figcaption><a href="mailto:yaseminunsever96@gmail.com" target="_blank">
+                </a></figure>
+              <a href="mailto:yaseminunsever96@gmail.com" target="_blank"> </a></article>
+            <a href="mailto:yaseminunsever96@gmail.com" target="_blank"> </a></div>
+          <a href="mailto:yaseminunsever96@gmail.com" target="_blank"> </a></div>
+        <a href="mailto:yaseminunsever96@gmail.com" target="_blank"> </a></main>
+      <a href="mailto:yaseminunsever96@gmail.com" target="_blank"> </a>
+      <footer class="tm-footer text-center"><a href="mailto:yaseminunsever96@gmail.com"
+          target="_blank"> </a>
+        <p><a href="mailto:yaseminunsever96@gmail.com" target="_blank">Copyright
+            © 2021 Unsever Design | Web Design: </a><a rel="nofollow" href="http://cagilbenibol.com">Cagil
+            Benibol</a> </p>
       </footer>
     </div>
     <script src="js/jquery.min.js"></script>
@@ -111,5 +130,5 @@
 			}	
 		});
 	</script>
-</body>
+  </body>
 </html>
