--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Unsever Design</title>
+    <title>🦊Unsever Design🦊</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
     <link href="css/templatemo-style.css" rel="stylesheet">
   </head>
