--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <ul>
               <li class="tm-paging-item"><a href="#" class="tm-paging-link active">Logo</a></li>
               <li class="tm-paging-item"><a href="#" class="tm-paging-link">Character</a></li>
-              <li class="tm-paging-item"><a href="#" class="tm-paging-link">AlbumArt</a>
+              <li class="tm-paging-item"><a href="#" class="tm-paging-link">Album&nbsp;Art</a>
               </li>
             </ul>
           </nav>
@@ -392,7 +392,7 @@
           </div>
           <!-- PAGE CHARACTER -->
           <!-- PAGE ALBUMART -->
-          <div id="tm-gallery-page-albumart" class="tm-gallery-page hidden">
+          <div id="tm-gallery-page-album&nbsp;art" class="tm-gallery-page hidden">
             <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
               <figure> <a href="img/albumart/yaga.jpg" target="_blank"><img
                     src="img/albumart/yaga.jpg"
